developer tab in main website changed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 	<!-- mobile specific metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<!-- CSS -->
+    <!-- CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/fa/all.min.css">
 	<link rel="stylesheet" href="css/fa/fontawesome.min.css">
 	<link rel="stylesheet" href="css/base.css">
@@ -210,13 +211,13 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>iOS Developer</h3>
-							<p>Jun 2017 - Present</p>
+							<h3>Full Stack Developer</h3>
+							<p>Dec 2019 - Present</p>
 						</div>
 
 						<div class="timeline-content">
 							<h4>Zoho Corporation</h4>
-							<p style="text-align: justify;">I'm currently working for the iOS app of Zoho Sheet. Zoho Sheet is an online SaaS-based spreadsheet application. Zoho Sheet is one of the fastest spreadsheets available in App Store. The iOS app renders the spreadsheet in 60 FPS (Frames Per Second).</p>
+                            <p style="text-align: justify;">I'm currently working for the Zoho Sheet application as a Full Stack Developer. Zoho Sheet is an online SaaS-based spreadsheet application.</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -228,7 +229,25 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Full-stack Developer</h3>
+							<h3>iOS Developer</h3>
+							<p>Jun 2017 - Dec 2019</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Zoho Corporation</h4>
+                            <p style="text-align: justify;">Zoho Sheet is one of the fastest spreadsheets available in App Store. The iOS app renders the spreadsheet in 60 FPS (Frames Per Second). In Zoho Sheet iOS, I've worked in migration of the app from Objective-C to Swift 3, and later to Swift 5. I played a key role in introducing VIPER architecture in the app, which made it much more scalable and integrated OOP concepts in the codebase. Other key features that I implemented are Data formats, sheet listing page, landing view, charts listing, color picker view, etc.</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Intern</h3>
 							<p>Jan 2017 - Mar 2017</p>
 						</div>
 
@@ -353,7 +372,20 @@
 		</div>
 		<div class="row">
 			<div class="col-twelve">
-				<div class="col-twelve sub-header"><h2>Skillset</h2></div>
+                <div class="col-twelve sub-header"><h2>Skillset</h2></div>
+                <ul class="language">
+                    <div class="col-four tab-full" style="margin-left: 0;">
+                        <li class="skill-button button stroke smoothscroll disabled">Full Stack Website Developer</li>
+                    </div>
+                    <div class="col-four tab-full" style="margin-left: 0;">
+                        <li class="skill-button button stroke smoothscroll disabled">Native Mobile App Developer</li>
+                    </div>
+                    <div class="col-four tab-full" style="margin-left: 0;">
+                        <li class="skill-button button stroke smoothscroll disabled">Machine Learning Developer</li>
+                    </div>
+                    <!-- <li class="button stroke smoothscroll disabled">Native Mobile App Developer</li>
+                    <li class="button stroke smoothscroll disabled">Machine Learning Developer</li> -->
+                </ul>
 				<!-- <div class="row">
 					<div class="col-1"><div class="col-1-content">C</div></div>
 					<div class="col-1"><div class="col-1-content">C++</div></div>
@@ -375,8 +407,8 @@
 					<div class="col-1"><div class="col-1-content">NodeJS</div></div>
 					<div class="col-1"><div class="col-1-content">Ruby on Rails</div></div>
 				</div> -->
-				<div class="col-six tab-full" style="margin-left: 0;">
-					<h4 style="color: #000000; text-align: left;">Programming Languages (Compiled)</h4>
+				<!-- <div class="col-six tab-full" style="margin-left: 0;">
+					<h4 style="color: #000000; text-align: left;">Programming Languages (Compiled)</h4> -->
 					<!-- <ul class="skill-bars">
 						<li><div class="progress percent90"></div><strong>C</strong></li>
 						<li><div class="progress percent90"></div><strong>C++</strong></li>
@@ -384,165 +416,60 @@
 						<li><div class="progress percent90"></div><strong>OBJECTIVE-C</strong></li>
 						<li><div class="progress percent90"></div><strong>SWIFT</strong></li>
 					</ul> -->
-					<ul class="language">
+					<!-- <ul class="language">
 						<li class="button stroke smoothscroll disabled">C</li>
 						<li class="button stroke smoothscroll disabled">C++</li>
 						<li class="button stroke smoothscroll disabled">JAVA</li>
 						<li class="button stroke smoothscroll disabled">OBJECTIVE C</li>
 						<li class="button stroke smoothscroll disabled">SWIFT</li>
 					</ul>
-					<h4 style="color: #000000; text-align: left;">Markup Languages</h4>
+					<h4 style="color: #000000; text-align: left;">Markup Languages</h4> -->
 					<!-- <ul class="skill-bars">
 						<li><div class="progress percent90"></div><strong>HTML 5</strong></li>
 						<li><div class="progress percent90"></div><strong>CSS 3</strong></li>
 						<li><div class="progress percent90"></div><strong>XML</strong></li>
 					</ul> -->
-					<ul class="language">
+					<!-- <ul class="language">
 						<li class="button stroke smoothscroll disabled">HTML 5</li>
 						<li class="button stroke smoothscroll disabled">CSS 3</li>
 						<li class="button stroke smoothscroll disabled">XML</li>
 					</ul>
-					<h4 style="color: #000000; text-align: left;">Front-end Development</h4>
+					<h4 style="color: #000000; text-align: left;">Front-end Development</h4> -->
 					<!-- <ul class="skill-bars">
 						<li><div class="progress percent90"></div><strong>ANGULAR JS</strong></li>
 						<li><div class="progress percent90"></div><strong>BOOTSTRAP</strong></li>
 					</ul> -->
-					<ul class="language">
+					<!-- <ul class="language">
 						<li class="button stroke smoothscroll disabled">ANGULAR JS</li>
 						<li class="button stroke smoothscroll disabled">BOOTSTRAP</li>
 					</ul>
-					<h4 style="color: #000000; text-align: left;">Database Languages</h4>
+					<h4 style="color: #000000; text-align: left;">Database Languages</h4> -->
 					<!-- <ul class="skill-bars">
 						<li><div class="progress percent90"></div><strong>MYSQL</strong></li>
 					</ul> -->
-					<ul class="language">
+					<!-- <ul class="language">
 						<li class="button stroke smoothscroll disabled">MYSQL</li>
-					</ul>
-				</div>
-				<div class="col-six tab-full" style="margin-left: 0;">
-					<h4 style="color: #000000; text-align: left;">Programming Languages (Scripting)</h4>
-					<!-- <ul class="skill-bars">
-						<li><div class="progress percent90"></div><strong>PYTHON</strong></li>
-						<li><div class="progress percent90"></div><strong>JAVASCRIPT</strong></li>
-						<li><div class="progress percent90"></div><strong>BASH</strong></li>
-						<li><div class="progress percent90"></div><strong>RUBY-C</strong></li>
 					</ul> -->
-					<ul class="language">
-						<li class="button stroke smoothscroll disabled">PYTHON</li>
-						<li class="button stroke smoothscroll disabled">JAVASCRIPT</li>
-						<li class="button stroke smoothscroll disabled">BASH</li>
-						<li class="button stroke smoothscroll disabled">RUBY</li>
-					</ul>
-					<h4 style="color: #000000; text-align: left;">Server Side Development</h4>
-					<!-- <ul class="skill-bars">
-						<li><div class="progress percent90"></div><strong>Spring</strong></li>
-						<li><div class="progress percent90"></div><strong>NodeJS</strong></li>
-						<li><div class="progress percent90"></div><strong>Ruby on Rails</strong></li>
-					</ul> -->
-					<ul class="language">
-						<li class="button stroke smoothscroll disabled">Spring</li>
-						<li class="button stroke smoothscroll disabled">NodeJS</li>
-						<li class="button stroke smoothscroll disabled">Ruby on Rails</li>
-					</ul>
-					<h4 style="color: #000000; text-align: left;">Mobile Development</h4>
-					<!-- <ul class="skill-bars">
-						<li><div class="progress percent90"></div><strong>Android Studio (Android)</strong></li>
-						<li><div class="progress percent90"></div><strong>XCode (iOS)</strong></li>
-					</ul> -->
-					<ul class="language">
-						<li class="button stroke smoothscroll disabled">Android Studio</li>
-						<li class="button stroke smoothscroll disabled">XCode (iOS)</li>
-					</ul>
-					<h4 style="color: #000000; text-align: left;">Machine Learning Libraries</h4>
-					<!-- <ul class="skill-bars">
-						<li><div class="progress percent90"></div><strong>MYSQL</strong></li>
-					</ul> -->
-					<ul class="language">
-						<li class="button stroke smoothscroll disabled">NUMPY</li>
-						<li class="button stroke smoothscroll disabled">SCIPY</li>
-					</ul>
-				</div> 
-			</div>
-		</div>
-		<div class="col-twelve sub-header" style="padding-top: 30px;"><h2>Projects</h2></div>
-		<div class="row" style="padding: 20px;">
-			<div class="col-twelve">
-				<div class="row project">
-					<div class="col-four tab-full">
-						<img src="images/projects/zoho.png" class="project-image"></img>
-					</div>
-					<div class="col-eight tab-full">
-						<h3 class="project-title">Zoho Sheet</h3>
-						<p class="project-content">In Zoho Sheet iOS, I've worked in migration of the app from Objective-C to Swift 3, and later to Swift 5. I played a key role in introducing VIPER architecture in the app, which made it much more scalable and integrated OOP concepts in the codebase. Other key features that I implemented are Data formats, sheet listing page, landing view, charts listing, color picker view, etc.</p>
-					</div>
-				</div>
-				<div class="row project">
-					<div class="col-four tab-full">
-						<img src="images/projects/bothoven.png" class="project-image"></img>
-					</div>
-					<div class="col-eight tab-full">
-						<h2 class="project-title">Bothoven</h2>
-						<p class="project-content">Bothoven is an interesting project where 2 robots collaborate and play a given sequence of notes placed randomly on an arena to produce music. It was done as a part of e-Yantra Robotics competition conducted by IIT Bombay. The project was realised using Fire Bird V Robots. ZigBee technology was also used to enable wireless communication.</p>
-					</div>
-				</div>
-				<div class="row project">
-					<div class="col-four tab-full">
-						<img src="images/projects/sunshine.png" class="project-image"></img>
-					</div>
-					<div class="col-eight tab-full">
-						<h2 class="project-title">Sunshine</h2>
-						<p class="project-content">This hybrid app was build for the NASA Space App Challenge 2017, a 24-hour hackathon  using Ionic framework. This app lets you calculate the energy produced by the solar panel system and helps you to identify which all appliances can be used with the available power. An additional feature of this app is that it can calculate tilt angle of solar panel based on season and latitude input.</p>
-					</div>
-				</div>
-				<div class="row project">
-					<div class="col-four tab-full">
-						<img src="images/projects/eawad.jpg" class="project-image"></img>
-					</div>
-					<div class="col-eight tab-full">
-						<h2 class="project-title">Waste Disposal Management Application</h2>
-						<p class="project-content">Waste Disposal Management Application is a hybrid mobile application that runs on all major platforms. The main objective was to connect garbage collectors and users (similar to Uber and Ola). The app was built in Ionic framework along with Node.js and MySQL.</p>
-					</div>
-				</div>
-				<div class="row project">
-					<div class="col-four tab-full">
-						<img src="images/projects/medical.png" class="project-image"></img>
-					</div>
-					<div class="col-eight tab-full">
-						<h2 class="project-title">Medical App</h2>
-						<p class="project-content">It's an Android application that intends to provide faster medical care by connecting patients with nearby doctors. This app was built as a part of 24- hour hackathon conducted by Envestnet. The main tools used were Android Studio, Node.js and MongoDB.</p>
-					</div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-twelve"></div>
 			<div class="col-twelve">
-				<div class="col-twelve sub-header"><h2>Blogs</h2></div>
-				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
-					<div class="blogpost" style="text-align: center;">
-						<div class="row" style="margin: 10px;">
-							<i class="fab fa-medium" style="width: 100%; max-width: 100px; font-size: 100px;"></i>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<h2 class="blog-title">Git anonymize user name and user email in the commits log</h2>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<p class="blog-content">In git version control, you can set the user name and user email that should be displayed....</p>
-						</div>
-					</div></a>
+				<br/><br/>
+                <div class="col-six tab-full"><a href="https://github.com/danieljames-dj?tab=repositories" target="_blank" style="color: inherit;">
+                    <div class="image-container">
+                        <img src="images/developer/projects.png" class="image-dev"></img>
+                        <h2 class="image-title">OPEN SOURCE PROJECTS</h2>
+                        <div class="after"></div>
+                    </div></a>
 				</div>
-				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/common-character-encodings-dfa74e28725d" target="_blank" style="color: inherit;">
-					<div class="blogpost" style="text-align: center;">
-						<div class="row" style="margin: 10px;">
-							<i class="fab fa-medium" style="width: 100%; max-width: 100px; font-size: 100px;"></i>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<h2 class="blog-title">Common character encodings</h2>
-						</div>
-						<div class="row" style="margin: 10px; height: 30px;">
-							<p class="blog-content">In a file or a program, the characters supported will be depending on the character encoding....</p>
-						</div>
-					</div></a>
+				<div class="col-six tab-full"><a href="https://danieljames-dj.github.io/developer-blogs/" target="_blank" style="color: inherit;">
+                    <div class="image-container">
+                        <img src="images/developer/blogs.png" class="image-dev"></img>
+                        <h2 class="image-title">DEVELOPER BLOGS</h2>
+                        <div class="after"></div>
+                    </div></a>
 				</div>
 			</div>
 		</div>
