font of home page changed to roboto and few other mods as well

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/fa/all.min.css">
 	<link rel="stylesheet" href="css/fa/fontawesome.min.css">
 	<link rel="stylesheet" href="css/base.css">
@@ -51,7 +51,7 @@
 
 	<!-- navigationbar -->
 	<header>   	
-		<div class="topnav" id="navbar">
+		<div class="new-font topnav" id="navbar">
 			<ul id="nav" class="nav">
 				<li class="current"><a class="smoothscroll" href="#intro">Home</a></li>
 				<li><a class="smoothscroll" href="#about">About</a></li>
@@ -62,15 +62,6 @@
 				<li><a class="smoothscroll" href="#contact">Contact</a></li>
 			</ul>
 		</div>
-		<!-- <span style="display: inline-block;">
-			<a class="active" href="#intro">HOME</a>
-			<li><a class="smoothscroll" href="#about">ABOUT</a></li>
-			<li><a class="smoothscroll" href="#developer">DEVELOPER</a></li>
-			<li><a class="smoothscroll" href="#cuber">CUBER</a></li>
-			<li><a class="smoothscroll" href="#traveller">GALLIVANTER</a></li>
-			<li><a class="smoothscroll" href="#gamer">GAMER</a></li>
-			<li><a class="smoothscroll" href="#contact">CONTACT</a></li>
-		</span> -->
 	</header> <!-- /navigationbar -->
 
 	<!-- intro -->
@@ -79,26 +70,22 @@
 		<div class="intro-content">
 			<div class="row">
 				<div class="col-twelve">
-					<h5>I am</h5>
-					<h1>DANIEL JAMES</h1>
-					<p class="intro-position">
-						<span><a href="#developer" style="color: white;">Developer</a></span>
-						<span><a href="#cuber" style="color: white;">Cuber</a></span>
-						<span><a href="#traveller" style="color: white;">Gallivanter</a></span>
-						<span><a href="#gamer" style="color: white;">Gamer</a></span>
+					<h5 class="new-font">I am</h5>
+					<h1 class="new-font">DANIEL JAMES</h1>
+					<p class="new-font intro-position">
+						<span><a class="smoothscroll" href="#developer" style="color: white;">Developer</a></span>
+						<span><a class="smoothscroll" href="#cuber" style="color: white;">Cuber</a></span>
+						<span><a class="smoothscroll" href="#traveller" style="color: white;">Gallivanter</a></span>
+						<span><a class="smoothscroll" href="#gamer" style="color: white;">Gamer</a></span>
 					</p>
-					<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
+					<a class="new-font button stroke smoothscroll" href="#about" title="">More About Me</a>
 				</div>
 			</div>
 		</div>
 		<ul class="intro-social">        
-			<li><a href="mailto:djdany444@gmail.com" target="_blank"><i class="fa fa-envelope" style="font-size: 30px;"></i></a></li>
+			<li><a class="smoothscroll" href="#contact"><i class="fa fa-envelope" style="font-size: 30px;"></i></a></li>
 			<li><a href="http://www.linkedin.com/in/danieljames-dj" target="_blank"><i class="fab fa-linkedin" style="font-size: 30px;"></i></a></li>
-			<!-- <li><a href="https://twitter.com/djdany444" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
-			<li><a href="https://github.com/danieljames-dj" target="_blank"><i class="fab fa-github" style="font-size: 30px;"></i></a></li>
-			<li><a href="https://medium.com/@daniel_james" target="_blank"><i class="fab fa-medium" style="font-size: 30px;"></i></a></li>
-			<!-- <li><a href="https://www.hackerrank.com/danieljames" target="_blank"><i class="fab fa-hackerrank"></i></a></li> -->
-			<!-- <li><a href="https://www.kaggle.com/danieljamesdj" target="_blank"><i class="fab fa-kaggle"></i></a></li> -->
+			<li><a href="https://twitter.com/djdany444" target="_blank"><i class="fa fa-twitter" style="font-size: 30px;"></i></a></li>
 		</ul> <!-- /intro-social -->
 	</section> <!-- /intro -->
 
@@ -110,7 +97,7 @@
 				<h1>Let me introduce myself.</h1>
 				<div class="intro-info">
 					<img src="images/profile-pic.jpg" alt="Profile Picture">
-					<p class="lead" style="text-align: justify;">I'm Daniel James and friends call me Dany or DJ. I'm currently working as an iOS developer in Zoho Corporation, Chennai. I'm interested in developing web apps & mobile apps. I'm a Math nerd and have a strong grit in solving computational problems. Machine learning is one of the domain that I'm very inquisitive about. I'm an avid speedcuber and a fun loving guy.</p>
+					<p class="lead" style="text-align: justify;">I'm Daniel James and friends call me Dany or DJ. I'm currently working as a software developer in Zoho Corporation, Chennai. I'm interested in developing web apps & mobile apps. I'm a Math nerd and have a strong grit in solving computational problems. Machine learning is one of the domain that I'm very inquisitive about. I'm an avid speedcuber and a fun loving guy.</p>
 				</div> 
 			</div>
 		</div>
@@ -775,6 +762,17 @@
 	
 	<!-- footer -->
 	<footer id="footer">
+		<div class="row">
+			<div class="col-twelve tab-full social" style="text-align: center; margin-bottom: 20px;">
+				<ul class="footer-social">
+					<li><a href="https://github.com/danieljames-dj" target="_blank"><i class="fab fa-github" style="font-size: 30px;"></i></a></li>
+					<li><a href="https://www.kaggle.com/danieljamesdj" target="_blank"><i class="fab fa-kaggle" style="font-size: 30px;"></i></a></li>
+					<li><a href="http://www.linkedin.com/in/danieljames-dj" target="_blank"><i class="fab fa-linkedin" style="font-size: 30px;"></i></a></li>
+					<li><a href="https://twitter.com/djdany444" target="_blank"><i class="fa fa-twitter" style="font-size: 30px;"></i></a></li>
+					<li><a href="https://medium.com/@daniel_james" target="_blank"><i class="fab fa-medium" style="font-size: 30px;"></i></a></li>
+				</ul>
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-six tab-full pull-right social">
 				<ul class="footer-social">        
