--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Full Stack Developer</h3>
+							<h3 class="new-font">Full Stack Developer</h3>
 							<p>Dec 2019 - Present</p>
 						</div>
 
@@ -216,7 +216,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>iOS Developer</h3>
+							<h3 class="new-font">iOS Developer</h3>
 							<p>Jun 2017 - Dec 2019</p>
 						</div>
 
@@ -234,7 +234,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Intern</h3>
+							<h3 class="new-font">Intern</h3>
 							<p>Jan 2017 - Mar 2017</p>
 						</div>
 
@@ -284,7 +284,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Bachelor Degree</h3>
+							<h3 class="new-font">Bachelor Degree</h3>
 							<p>Computer Science<br/>Kerala University</p>
 						</div>
 
@@ -302,7 +302,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Schooling</h3>
+							<h3 class="new-font">Schooling</h3>
 							<p>Central Board of Secondary Education (CBSE)</p>
 						</div>
 
@@ -347,96 +347,36 @@
 
 	<!-- developer -->
 	<section id="developer">
-		<div class="row section-intro">
+		<div class="row">
 			<div class="col-twelve">
-
-				<h5>Developer</h5>
-				<h1>All about my Coding.</h1>
-
+				<h1 class="newTitle">Developer</h1>
+				<h1 class="newSubTitle">All about my Coding</h1>
 				<p class="lead">Through my passion in Mathematics, I inculcated an interest in Programming. The main area of my interest are Data Structures and OOP Concepts. I also have prowess in working in different frameworks.</p>
 
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-twelve">
-                <div class="col-twelve sub-header"><h2>Skillset</h2></div>
-                <ul class="language">
-                    <div class="col-four tab-full" style="margin-left: 0;">
-                        <li class="skill-button button stroke smoothscroll disabled">Full Stack Website Developer</li>
-                    </div>
-                    <div class="col-four tab-full" style="margin-left: 0;">
-                        <li class="skill-button button stroke smoothscroll disabled">Native Mobile App Developer</li>
-                    </div>
-                    <div class="col-four tab-full" style="margin-left: 0;">
-                        <li class="skill-button button stroke smoothscroll disabled">Machine Learning Developer</li>
-                    </div>
-                    <!-- <li class="button stroke smoothscroll disabled">Native Mobile App Developer</li>
-                    <li class="button stroke smoothscroll disabled">Machine Learning Developer</li> -->
-                </ul>
-				<!-- <div class="row">
-					<div class="col-1"><div class="col-1-content">C</div></div>
-					<div class="col-1"><div class="col-1-content">C++</div></div>
-					<div class="col-1"><div class="col-1-content">Java</div></div>
-					<div class="col-1"><div class="col-1-content">Obj-C</div></div>
-					<div class="col-1"><div class="col-1-content">Swift</div></div>
-					<div class="col-1"><div class="col-1-content">Python</div></div>
-					<div class="col-1"><div class="col-1-content">JavaScript</div></div>
-					<div class="col-1"><div class="col-1-content">Bash</div></div>
-					<div class="col-1"><div class="col-1-content">HTML 5</div></div>
-					<div class="col-1"><div class="col-1-content">CSS 3</div></div>
-					<div class="col-1"><div class="col-1-content">XML</div></div>
-					<div class="col-1"><div class="col-1-content">AngularJS</div></div>
-					<div class="col-1"><div class="col-1-content">Bootstrap</div></div>
-					<div class="col-1"><div class="col-1-content">MySQL</div></div>
-					<div class="col-1"><div class="col-1-content">Android Studio</div></div>
-					<div class="col-1"><div class="col-1-content">Xcode</div></div>
-					<div class="col-1"><div class="col-1-content">Spring Boot</div></div>
-					<div class="col-1"><div class="col-1-content">NodeJS</div></div>
-					<div class="col-1"><div class="col-1-content">Ruby on Rails</div></div>
-				</div> -->
-				<!-- <div class="col-six tab-full" style="margin-left: 0;">
-					<h4 style="color: #000000; text-align: left;">Programming Languages (Compiled)</h4> -->
-					<!-- <ul class="skill-bars">
-						<li><div class="progress percent90"></div><strong>C</strong></li>
-						<li><div class="progress percent90"></div><strong>C++</strong></li>
-						<li><div class="progress percent90"></div><strong>JAVA</strong></li>
-						<li><div class="progress percent90"></div><strong>OBJECTIVE-C</strong></li>
-						<li><div class="progress percent90"></div><strong>SWIFT</strong></li>
-					</ul> -->
-					<!-- <ul class="language">
-						<li class="button stroke smoothscroll disabled">C</li>
-						<li class="button stroke smoothscroll disabled">C++</li>
-						<li class="button stroke smoothscroll disabled">JAVA</li>
-						<li class="button stroke smoothscroll disabled">OBJECTIVE C</li>
-						<li class="button stroke smoothscroll disabled">SWIFT</li>
-					</ul>
-					<h4 style="color: #000000; text-align: left;">Markup Languages</h4> -->
-					<!-- <ul class="skill-bars">
-						<li><div class="progress percent90"></div><strong>HTML 5</strong></li>
-						<li><div class="progress percent90"></div><strong>CSS 3</strong></li>
-						<li><div class="progress percent90"></div><strong>XML</strong></li>
-					</ul> -->
-					<!-- <ul class="language">
-						<li class="button stroke smoothscroll disabled">HTML 5</li>
-						<li class="button stroke smoothscroll disabled">CSS 3</li>
-						<li class="button stroke smoothscroll disabled">XML</li>
-					</ul>
-					<h4 style="color: #000000; text-align: left;">Front-end Development</h4> -->
-					<!-- <ul class="skill-bars">
-						<li><div class="progress percent90"></div><strong>ANGULAR JS</strong></li>
-						<li><div class="progress percent90"></div><strong>BOOTSTRAP</strong></li>
-					</ul> -->
-					<!-- <ul class="language">
-						<li class="button stroke smoothscroll disabled">ANGULAR JS</li>
-						<li class="button stroke smoothscroll disabled">BOOTSTRAP</li>
-					</ul>
-					<h4 style="color: #000000; text-align: left;">Database Languages</h4> -->
-					<!-- <ul class="skill-bars">
-						<li><div class="progress percent90"></div><strong>MYSQL</strong></li>
-					</ul> -->
-					<!-- <ul class="language">
-						<li class="button stroke smoothscroll disabled">MYSQL</li>
-					</ul> -->
+			<div class="new-font col-twelve">
+				<div class="col-four" style="text-align: center;">
+					<i class="fas fa-window-maximize" style="font-size: 60px; color: #4169e1;"></i>
+					<h3 class="skillset-heading">Full Stack<br/>Website Developer</h3>
+					<p class="skillset-content">
+						Have used many modern website frameworks. My personal favorite is Angular for front-end and Node.js for backend. Have experience in database queries as well (mainly MySQL, but have used MongoDB as well).
+					</p>
+				</div>
+				<div class="col-four" style="text-align: center;">
+					<i class="fas fa-mobile-alt" style="font-size: 60px; color: #4169e1;"></i>
+					<h3 class="skillset-heading">Native Mobile<br/>App Developer</h3>
+					<p class="skillset-content">
+						I have experience in creating native mobile apps for both iOS and Android mobile phones. In iOS, I've mainly worked using Swift in Xcode (but have used Objective-C as well). For Android apps, I use Java in Android Studio.
+					</p>
+				</div>
+				<div class="col-four" style="text-align: center;">
+					<i class="fas fa-chalkboard-teacher" style="font-size: 60px; color: #4169e1;"></i>
+					<h3 class="skillset-heading">Machine Learning<br/>Developer</h3>
+					<p class="skillset-content">
+						A beginner in Machine Learning, but have basic knowledge on various classification algorithms on Machine Learning. I've attempted few projects related to ML.
+					</p>
 				</div>
 			</div>
 		</div>
@@ -447,14 +387,14 @@
                 <div class="col-six tab-full"><a href="https://github.com/danieljames-dj?tab=repositories" target="_blank" style="color: inherit;">
                     <div class="image-container">
                         <img src="images/developer/projects.png" class="image-dev"></img>
-                        <h2 class="image-title">OPEN SOURCE PROJECTS</h2>
+                        <h2 class="new-font image-title">OPEN SOURCE PROJECTS</h2>
                         <div class="after"></div>
                     </div></a>
 				</div>
 				<div class="col-six tab-full"><a href="https://danieljames-dj.github.io/developer-blogs/" target="_blank" style="color: inherit;">
                     <div class="image-container">
                         <img src="images/developer/blogs.png" class="image-dev"></img>
-                        <h2 class="image-title">DEVELOPER BLOGS</h2>
+                        <h2 class="new-font image-title">DEVELOPER BLOGS</h2>
                         <div class="after"></div>
                     </div></a>
 				</div>
