revamped dev page 1

--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@
 
 	<!-- developer -->
 	<section id="developer">
-		<div class="row">
+		<div class="row section-intro">
 			<div class="col-twelve">
-				<h1 class="newTitle">Developer</h1>
-				<h1 class="newSubTitle">All about my Coding</h1>
+				<h5>Developer</h5>
+				<h1>All about my Coding.</h1>
 				<p class="lead">Through my passion in Mathematics, I inculcated an interest in Programming. The main area of my interest are Data Structures and OOP Concepts. I also have prowess in working in different frameworks.</p>
 
 			</div>
