--- a/index.html
+++ b/index.html
@@ -357,21 +357,21 @@
 		</div>
 		<div class="row">
 			<div class="new-font col-twelve">
-				<div class="col-four" style="text-align: center;">
+				<div class="col-four tab-full" style="text-align: center;">
 					<i class="fas fa-window-maximize" style="font-size: 60px; color: #4169e1;"></i>
 					<h3 class="skillset-heading">Full Stack<br/>Website Developer</h3>
 					<p class="skillset-content">
 						Have used many modern website frameworks. My personal favorite is Angular for front-end and Node.js for backend. Have experience in database queries as well (mainly MySQL, but have used MongoDB as well).
 					</p>
 				</div>
-				<div class="col-four" style="text-align: center;">
+				<div class="col-four tab-full" style="text-align: center;">
 					<i class="fas fa-mobile-alt" style="font-size: 60px; color: #4169e1;"></i>
 					<h3 class="skillset-heading">Native Mobile<br/>App Developer</h3>
 					<p class="skillset-content">
 						I have experience in creating native mobile apps for both iOS and Android mobile phones. In iOS, I've mainly worked using Swift in Xcode (but have used Objective-C as well). For Android apps, I use Java in Android Studio.
 					</p>
 				</div>
-				<div class="col-four" style="text-align: center;">
+				<div class="col-four tab-full" style="text-align: center;">
 					<i class="fas fa-chalkboard-teacher" style="font-size: 60px; color: #4169e1;"></i>
 					<h3 class="skillset-heading">Machine Learning<br/>Developer</h3>
 					<p class="skillset-content">
