few size changes

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 			<div class="col-twelve"></div>
 			<div class="col-twelve">
 				<br/><br/>
-                <div class="col-six tab-full"><a href="https://github.com/danieljames-dj?tab=repositories" target="_blank" style="color: inherit;">
+                <div class="col-six tab-full"><a href="https://github.com/danieljames-dj?tab=repositories" target="_blank" style="color: inherit; margin-bottom: 10px;">
                     <div class="image-container">
                         <img src="images/developer/projects.png" class="image-dev"></img>
                         <h2 class="new-font image-title">OPEN SOURCE PROJECTS</h2>
