--- a/developer-blogs.html
+++ b/developer-blogs.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-    window.location.replace("/developer-blogs/")
+    // window.location.replace("/developer-blogs/")
 </script>
