--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 					<i class="fas fa-chalkboard-teacher" style="font-size: 60px; color: #4169e1;"></i>
 					<h3 class="skillset-heading">Machine Learning<br/>Developer</h3>
 					<p class="skillset-content">
-						I am well sound in the standard implementation of Machine Learning algorithms through libraries, packages, and APIs such as scikit-learn, NumPy, Pandas, etc and applying them effectively to select the right models and learning procedures to fit the data.
+						I am well sound in the implementation of standard ML algorithms through libraries, packages, and APIs such as scikit-learn, NumPy, Pandas, etc and applying them effectively to select the right models and learning procedures to fit the data.
 					</p>
 				</div>
 			</div>
