--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
 	<!-- Browser icon - not needed for modern browsers as it will automatically look for favicon.ico -->
 	<link rel="icon" type="image/icon" href="favicon.ico">
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150422597-1"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+
+  	gtag('config', 'UA-150422597-1');
+	</script>
+
+
 </head>
 
 <body id="top">
