--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
 				</div>
 			</div>
 			<div class="col-four tab-full">
-				<div class="youtube" data-embed="_r9DJAqZ6_E">
-					<div class="youtube-title">Daniel James is giving a blind show in Rubiks Cube in his college</div>
+				<div class="youtube" data-embed="d1kNOuNV_gg">
+					<div class="youtube-title">Rubik's Cube Blindfolded solve at Yamistha 2014 at CET [Cubing Diary - Daniel James]</div>
 					<div class="play-button"></div>
 				</div>
 			</div>
