few changes in bg image

--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
 		<div class="intro-content">
 			<div class="row">
 				<div class="col-twelve">
-					<h5 class="new-font">I am</h5>
 					<h1 class="new-font">DANIEL JAMES</h1>
 					<p class="new-font intro-position">
 						<span><a class="smoothscroll" href="#developer" style="color: white;">Developer</a></span>
@@ -89,7 +88,7 @@
 						<span><a class="smoothscroll" href="#traveller" style="color: white;">Gallivanter</a></span>
 						<span><a class="smoothscroll" href="#gamer" style="color: white;">Gamer</a></span>
 					</p>
-					<a class="new-font button stroke smoothscroll" href="#about" title="">More About Me</a>
+					<!-- <a class="new-font button stroke smoothscroll" href="#about" title="">More About Me</a> -->
 				</div>
 			</div>
 		</div>
