few changes in website

--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
 		<div class="new-font topnav" id="navbar">
 			<ul id="nav" class="nav">
 				<li class="current"><a class="smoothscroll" href="#intro">Home</a></li>
-				<li><a class="smoothscroll" href="#about">About</a></li>
-				<li><a class="smoothscroll" href="#developer">Developer</a></li>
+				<li><a class="smoothscroll" href="#coder">Coder</a></li>
 				<li><a class="smoothscroll" href="#cuber">Cuber</a></li>
 				<li><a class="smoothscroll" href="#traveller">Gallivanter</a></li>
-				<li><a class="smoothscroll" href="#gamer">Gamer</a></li>
 				<li><a class="smoothscroll" href="#contact">Contact</a></li>
 			</ul>
 		</div>
@@ -83,10 +81,10 @@
 				<div class="col-twelve">
 					<h1 class="new-font">DANIEL JAMES</h1>
 					<p class="new-font intro-position">
-						<span><a class="smoothscroll" href="#developer" style="color: white;">Developer</a></span>
+						<span><a class="smoothscroll" href="#coder" style="color: white;">Coder</a></span>
+						<span><a class="smoothscroll" href="#chess-player" style="color: white;">Chess-Player</a></span>
 						<span><a class="smoothscroll" href="#cuber" style="color: white;">Cuber</a></span>
-						<span><a class="smoothscroll" href="#traveller" style="color: white;">Gallivanter</a></span>
-						<span><a class="smoothscroll" href="#gamer" style="color: white;">Gamer</a></span>
+						<span><a class="smoothscroll" href="#trader" style="color: white;">Algo-Trader</a></span>
 					</p>
 					<!-- <a class="new-font button stroke smoothscroll" href="#about" title="">More About Me</a> -->
 				</div>
@@ -100,14 +98,13 @@
 	</section> <!-- /intro -->
 
 	<!-- about -->
-	<section id="about">
+	<section id="coder">
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<h5>About</h5>
-				<h1>Let me introduce myself.</h1>
+				<h5>Coder</h5>
+				<h1>All about my Coding.</h1>
 				<div class="intro-info">
-					<img src="images/profile-pic.jpg" alt="Profile Picture">
-					<p class="lead" style="text-align: justify;">I'm Daniel James and friends call me Dany or DJ. I'm currently working as a software developer in Zoho Corporation, Chennai. I'm interested in developing web apps & mobile apps. I'm a Math nerd and have a strong grit in solving computational problems. Machine learning is one of the domain that I'm very inquisitive about. I'm an avid speedcuber and a fun loving guy.</p>
+					<p class="lead" style="text-align: justify;">I'm Daniel James and friends call me Dany or DJ. I'm currently working as a software developer in Fundfolio, Kochi. I'm interested in developing web apps & mobile apps. I'm a Math nerd and have a strong grit in solving computational problems. Machine learning is one of the domain that I'm very inquisitive about. I'm an avid speedcuber and a fun loving guy.</p>
 				</div> 
 			</div>
 		</div>
@@ -202,87 +199,64 @@
 			
 		</div> <!-- /resume-timeline -->
 
-		<div class="row resume-timeline">
-
-			<div class="col-twelve sub-header" style="padding-bottom: 0;"><h2>Education</h2></div>
-
-			<div class="col-twelve">
-
-				<div class="timeline-wrap">
-
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3 class="new-font">Bachelor Degree</h3>
-							<p>Computer Science<br/>Kerala University</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>College of Engineering Trivandrum</h4>
-							<p align="justify">The College of Engineering, Trivandrum, commonly known as CET, is a premier college situated in Thiruvananthapuram, Kerala.</p>
-						</div>
-
-					</div> <!-- /timeline-block -->
-
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3 class="new-font">Schooling</h3>
-							<p>Central Board of Secondary Education (CBSE)</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>Kendriya Vidyalaya (Ernakulam/Pattom)</h4>
-							<p align="justify">The Kendriya Vidyalaya Sangathan is a system of central government schools in India that are instituted under the aegis of the Ministry of Human Resource Development (MHRD).</p>
-						</div>
-
-					</div> <!-- /timeline-block -->
-
-					<!-- <div class="timeline-block">
-
-						<div class="timeline-ico">
-							<i class="fa fa-briefcase"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3>Bachelor Degree</h3>
-							<p>May 2013 - June 2014</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>Design College</h4>
-							<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-						</div>
-
-					</div> --> <!-- /timeline-block -->
-
-				</div> <!-- /timeline-wrap -->   			
-
-			</div> <!-- /col-twelve -->
-			
-		</div> <!-- /resume-timeline -->
-
 		<!-- <div class="row button-section"> -->
 			<!-- <div class="col-twelve"> -->
 				<!-- <a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a> -->
 				<!-- <a href="#" title="Download CV" class="button button-primary">Download CV</a> -->
 			<!-- </div>   		 -->
 		<!-- </div> -->
+		<div class="row">
+			<div class="new-font col-twelve">
+				<div class="col-four tab-full" style="text-align: center;">
+					<i class="fas fa-window-maximize" style="font-size: 60px; color: #4169e1;"></i>
+					<h3 class="skillset-heading">Full Stack<br/>Developer</h3>
+					<p class="skillset-content">
+						I am proficient in many web frameworks such as React and Angular along with other quintessential front end technologies. On the server-side programming, I am well versed in Node.js and Spring Boot. I also have knowledge of various DBMS technologies like MySQL, MongoDB, etc.
+					</p>
+				</div>
+				<div class="col-four tab-full" style="text-align: center;">
+					<i class="fas fa-mobile-alt" style="font-size: 60px; color: #4169e1;"></i>
+					<h3 class="skillset-heading">Native Mobile<br/>App Developer</h3>
+					<p class="skillset-content">
+						I am well experienced in creating secure, interactive and intuitive apps for both iOS and Android platforms. For iOS apps, I use Swift or Objective-C (Xcode) and for Android apps, I predominantly use Java in Android Studio.
+					</p>
+				</div>
+				<div class="col-four tab-full" style="text-align: center;">
+					<i class="fas fa-chalkboard-teacher" style="font-size: 60px; color: #4169e1;"></i>
+					<h3 class="skillset-heading">Machine Learning<br/>Developer</h3>
+					<p class="skillset-content">
+						I am well sound in the implementation of standard ML algorithms through libraries, packages, and APIs such as scikit-learn, NumPy, Pandas, etc and applying them effectively to select the right models and learning procedures to fit the data.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-twelve"></div>
+			<div class="col-twelve">
+				<br/><br/>
+                <div class="col-six tab-full"><a href="https://github.com/danieljames-dj?tab=repositories" target="_blank" style="color: inherit;">
+                    <div class="image-container">
+                        <img src="images/developer/projects.png" class="image-dev"></img>
+                        <h2 class="new-font image-title">OPEN SOURCE PROJECTS</h2>
+                        <div class="after"></div>
+                    </div></a>
+				</div>
+				<div class="col-six tab-full"><a href="https://danieljames-dj.github.io/developer-blogs/" target="_blank" style="color: inherit;">
+                    <div class="image-container">
+                        <img src="images/developer/blogs.png" class="image-dev"></img>
+                        <h2 class="new-font image-title">DEVELOPER BLOGS</h2>
+                        <div class="after"></div>
+                    </div></a>
+				</div>
+			</div>
+		</div>
 	</section> <!-- /about -->
 
 	<!-- developer -->
-	<section id="developer">
+	<section id="developer" style="display: none;">
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<h5>Developer</h5>
+				<h5>Chess-Player</h5>
 				<h1>All about my Coding.</h1>
 			</div>
 		</div>
@@ -525,63 +499,6 @@
 			</div>
 		</div>
 	</section> <!-- /traveller -->
-	
-	<!-- gamer -->
-	<section id="gamer">
-		<div class="row section-intro">
-			<div class="col-twelve">
-				<h5>Gamer</h5>
-				<h1>Just another Noob :-P</h1>
-				<p class="lead">I am just a casual gamer who plays a few recreational games occassionally. But I would like to connect with a lot of people in these games to make it more fun...</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-twelve">
-				<div class="col-four tab-full">
-					<div class="gamepost" style="text-align: center;">
-						<div class="row" style="margin: 10px; padding-top: 10px;">
-							<img src="images/games/typeracer.png"></img>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<h2>Typeracer</h2>
-							<h4>(Around 75 WPM)</h4>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<p><a href="https://data.typeracer.com/pit/profile?user=djdany444" target="_blank">Click here</a> to view my profile. Race with me when you're free!</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-four tab-full">
-					<div class="gamepost" style="text-align: center;">
-						<div class="row" style="margin: 10px; padding-top: 10px;">
-							<img src="images/games/pogo.png"></img>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<h2>Pokemon GO</h2>
-							<h4>(Trainer level: 33)</h4>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<p>Let's be friends in Pokémon GO! My Trainer Code is 0443 8105 5929!</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-four tab-full">
-					<div class="gamepost" style="text-align: center;">
-						<div class="row" style="margin: 10px; padding-top: 10px;">
-							<img src="images/games/coc.png"></img>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<h2>Clash of Clans</h2>
-							<h4>(TH: 12, BH: 8, XP: 174)</h4>
-						</div>
-						<div class="row" style="margin: 10px;">
-							<p>Here's my Player Code - #28CVYJPC2! Be friend with me and let's share COC tips & tricks!</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> <!-- /gamer -->
 
 	<!-- contact -->
 	<section id="contact">
