scroll issue fixed

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 		<div class="new-font topnav" id="navbar">
 			<ul id="nav" class="nav">
 				<li class="current"><a class="smoothscroll" href="#intro">Home</a></li>
-				<li><a class="smoothscroll" href="#coder">Coder</a></li>
-				<li><a class="smoothscroll" href="#cuber">Cuber</a></li>
-				<li><a class="smoothscroll" href="#traveller">Gallivanter</a></li>
+				<li><a class="smoothscroll" href="#coder">Coding</a></li>
+				<li><a class="smoothscroll" href="#cuber">Cubing</a></li>
+				<li><a class="smoothscroll" href="#traveller">Travel Vlogs</a></li>
 				<li><a class="smoothscroll" href="#contact">Contact</a></li>
 			</ul>
 		</div>
