--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<li class="current"><a class="smoothscroll" href="#intro">Home</a></li>
 				<li><a class="smoothscroll" href="#coder">Coding</a></li>
 				<li><a class="smoothscroll" href="#cuber">Cubing</a></li>
-				<li><a class="smoothscroll" href="#traveller">Travel Vlogs</a></li>
+				<li><a class="smoothscroll" href="#traveller">Travel-Vlogs</a></li>
 				<li><a class="smoothscroll" href="#contact">Contact</a></li>
 			</ul>
 		</div>
@@ -81,10 +81,10 @@
 				<div class="col-twelve">
 					<h1 class="new-font">DANIEL JAMES</h1>
 					<p class="new-font intro-position">
-						<span><a class="smoothscroll" href="#coder" style="color: white;">Coder</a></span>
-						<span><a class="smoothscroll" href="#chess-player" style="color: white;">Chess-Player</a></span>
-						<span><a class="smoothscroll" href="#cuber" style="color: white;">Cuber</a></span>
-						<span><a class="smoothscroll" href="#trader" style="color: white;">Algo-Trader</a></span>
+						<span><a class="smoothscroll" href="#coder" style="color: white;">Coding</a></span>
+						<span><a class="smoothscroll" href="#chess-player" style="color: white;">Chess</a></span>
+						<span><a class="smoothscroll" href="#cuber" style="color: white;">Cubing</a></span>
+						<span><a class="smoothscroll" href="#trader" style="color: white;">Algo-Trading</a></span>
 					</p>
 					<!-- <a class="new-font button stroke smoothscroll" href="#about" title="">More About Me</a> -->
 				</div>
