--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 				<ul class="coder-social">
 					<li><a href="https://github.com/danieljames-dj" target="_blank"><i class="fab fa-github" style="font-size: 30px;"></i></a></li>
 					<li><a href="http://www.linkedin.com/in/danieljames-dj" target="_blank"><i class="fab fa-linkedin" style="font-size: 30px;"></i></a></li>
-					<li><a href="https://medium.com/@daniel_james" target="_blank"><i class="fab fa-medium" style="font-size: 30px;"></i></a></li>
+					<li><a href="https://medium.com/danieljames-dev-blogs" target="_blank"><i class="fab fa-medium" style="font-size: 30px;"></i></a></li>
 				</ul>
 			</div>
 
@@ -639,17 +639,6 @@
 	
 	<!-- footer -->
 	<footer id="footer">
-		<div class="row">
-			<div class="col-twelve tab-full social" style="text-align: center; margin-bottom: 20px;">
-				<ul class="footer-social">
-					<li><a href="https://github.com/danieljames-dj" target="_blank"><i class="fab fa-github" style="font-size: 30px;"></i></a></li>
-					<li><a href="https://www.kaggle.com/danieljamesdj" target="_blank"><i class="fab fa-kaggle" style="font-size: 30px;"></i></a></li>
-					<li><a href="http://www.linkedin.com/in/danieljames-dj" target="_blank"><i class="fab fa-linkedin" style="font-size: 30px;"></i></a></li>
-					<li><a href="https://twitter.com/djdany444" target="_blank"><i class="fa fa-twitter" style="font-size: 30px;"></i></a></li>
-					<li><a href="https://medium.com/@daniel_james" target="_blank"><i class="fab fa-medium" style="font-size: 30px;"></i></a></li>
-				</ul>
-			</div>
-		</div>
 		<div class="row">
 			<div class="col-six tab-full pull-right social">
 				<ul class="footer-social">        
