--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-    window.location.replace("https://google.com")
+    window.location.replace(`https://google.com?url=${window.location.href}`)
 </script>
