--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-    window.location.replace(`https://google.com?url=${window.location.href}`)
+    window.location.replace(`https://redirect.danieljames.in?url=${window.location.href}`)
 </script>
